--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ html,h1,h2,h3,h4,h5,h6,a{
 
 }
 .description h1{
-	color:rgb(100, 12, 12) ;
+	color:rgb(136, 0, 21) ;
 }
 .description p{
 	color:rgb(0, 0, 0);
@@ -66,8 +66,8 @@ html,h1,h2,h3,h4,h5,h6,a{
 	line-height: 1.5;
 }
 .description button{
-	border:1px  solid rgb(100, 12, 12));
-	background:rgb(14, 23, 143);
+	border:1px  solid rgb(136, 0, 21);
+	background:rgb(136, 0, 21);
 	color:#fff;
 }
 /*about section*/
@@ -78,7 +78,7 @@ html,h1,h2,h3,h4,h5,h6,a{
 	position: relative;
 }
 .about h1{
-	color:#F97300;
+	color:rgb(0, 0, 0);
 	margin: 2em;
 }
 .about img{
@@ -94,10 +94,10 @@ html,h1,h2,h3,h4,h5,h6,a{
 }
 .about .desc{
 	padding: 2em;
-	border-left:4px solid #10828C;
+	border-left:4px solid rgb(136, 0, 21);
 }
 .about .desc h3{
-	color: #10828C;
+	color: rgb(136, 0, 21);
 }
 .about .desc p{
 	line-height:2;
